<resources>
    <string name="app_name">WeatherApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="metric_second">Meter / Second</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="save">save</string>
    <string name="today">Today</string>
    <string name="updatelocation">Update Location</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
</resources>