<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment2"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/favouriteFragment"
            android:icon="@drawable/favorite_outline"
            android:title="@string/favourite" />
        <item
            android:id="@+id/alarmFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/alarm_add"
            android:title="@string/alarm" />
        <item
            android:id="@+id/settingFragment"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon"/>
    </group>


</menu>