<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".settings.SettingFragment">

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/title_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/location"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/title_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/language"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_location"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_location"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#454545"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location">
        <RadioGroup
            android:id="@+id/radio_group_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_gps"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"

                android:text="@string/gps"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_map"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/map"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_language"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#454545"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@id/cv_location"
        app:layout_constraintTop_toBottomOf="@id/tv_language">

        <RadioGroup
            android:id="@+id/radio_group_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_english"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"

                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_arabic"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/arabic"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/title_background"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_wind_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_location" />

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/title_background"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="Wind Speed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_temperature"
        app:layout_constraintTop_toBottomOf="@id/cv_language" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_temperature"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#454545"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature">

        <RadioGroup
            android:id="@+id/radio_group_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_celsius"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"

                android:text="@string/celsius"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_kelvin"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/kelvin"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_fahrenheit"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/fahrenheit"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_wind_speed"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#454545"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@id/cv_location"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_speed">

        <RadioGroup
            android:id="@+id/radio_group_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_meter"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"

                android:text="@string/metric_second"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_mile"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/mile_hour"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_change_main_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatelocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>